# aiven_2

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml  template.env_producer
aiven/cli/: aiven_cli.py
aiven/consumer/: __main__.py  worker.py
aiven/db/: create_db.py  crud.py  db.py
aiven/producer/: __main__.py  worker.py
conf/: config.py  config_consumer.py  config_producer.py  logging.conf.yml
docker/: Dockerfile
scripts/application/: consumer.sh  create_db.sh  producer.sh
scripts/cicd/: format.sh  test.sh
tests/: conftest.py
tests/tests_cli/: test_cli.py
tests/tests_consumer/: test_consumer.py
tests/tests_db/: tests_create_db.py  tests_crud_task.py  tests_crud_url.py
tests/tests_producer/: test_producer.py
